events/static/events/css/main.css
@font-face {
    font-family: 'Semplitica Ombra';
    src: url('../fonts/Semplicita/Semplicita_Ombra.otf');
}

:root {
    font-size: 16px;
    --base: #171717;
    --base-secondary: #444444;
    --primary: #EDEDED;
    --accent: #DA0037;
    --success: #278265;
    --error: rgb(201, 49, 49);
    --debug: rgb(206, 103, 0);
    --info: rgb(0, 170, 170);
    --warning: rgb(153, 138, 0);
    --deactivated: rgb(136, 136, 136);
}

body {
    background-image: linear-gradient(to bottom right, var(--base), var(--base-secondary));
    color: var(--primary);
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    height: 100%;
}

@media only screen and (max-width: 800px) {
    :root {
        font-size: 14px;
    }
}

main {
    min-height: 50vh;
    position: relative;
    top: 4rem;
    height: 100%;
}

/* Nav Bar */

.navbar {
    position: fixed;
    top: 0;
    z-index: 100;
    background-color: rgba(0, 0, 0, 0.5);
    height: 4rem;
    width: 100%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr;
    justify-content: space-between;
    justify-items: center;
    align-items: center;
    padding: 0 1rem;
}

.navbar .nav-left, .nav-right {
    width: 100%;
}

.navbar .nav-right {
    display: flex;
    justify-content: flex-end;
}

.navbar li {
    display: inline-block;
    margin: 0 1.5rem;
    font-size: 0.8rem;
}

.navbar span {
    text-transform: uppercase;
    font-weight: 200;
    font-size: 0.8rem;
}

.navbar a {
    font-size: 0.8rem;
    text-decoration: none;
    color: var(--primary);
    transition: 0.3s;
}

.navbar a:visited {
    color: var(--primary);
}

body.hasHover .navbar a:hover {
    color: var(--accent);
    transition: 0.3s;
}

.navbar a:active {
    filter: brightness(50%);
    transition: 0.2s;
}

.center {
    text-align: center;
}

@media only screen and (max-width: 650px) {
    .navbar {
        grid-template-columns: repeat(2, 1fr);
        white-space: nowrap;
    }

    .navbar span {
        display: none;
    }

    .navbar li {
        margin: 0 1rem;
    }
}

/* Alerts */
.alert {
    border-radius: 10px;
    margin: 0.25rem 0.5rem;
    margin-bottom: 0.5rem;
    padding: 1rem 2rem;
    font-weight: 200;
}

.alert-success {
    background-color: var(--success);
}

.alert-error {
    background-color: var(--error);
}

.alert-debug {
    background-color: var(--debug);
}

.alert-info {
    background-color: var(--info);
}

.alert-warning {
    background-color: var(--warning);
}

/* Default anchor styling */
a {
    color: lightblue;
    font-size: 0.8rem;
    transition: 0.3s;
}

a:visited {
    color: lightblue;
}

body.hasHover a:hover {
    color: var(--accent);
    transition: 0.3s;
}

a:active {
    filter: brightness(50%);
    transition: 0.2s;
    color: var(--accent);
}

/* Buttons */

.btn {
    cursor: pointer;
    margin-top: 2rem;
    background-color: rgba(0,0,0,0);
    border-width: 0;
    color: var(--primary);
    font-size: 1.25rem;
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    font-weight: 200;
    border: 1px solid var(--primary);
    border-radius: 5px;
    padding: 0.75rem;
    width: 10rem;
    transition: 0.3s;
    text-decoration: none;
    text-align: center;
}

.btn:visited {
    color: var(--primary);
}

body.hasHover .btn:hover {
    color: black;
    background-color: var(--primary);
    transition: 0.3s;
}

.btn:active {
    filter: brightness(50%);
    color: black;
    background-color: var(--primary);
    transition: 0.3s;
    transition: 0.2s;
}

@media only screen and (max-width: 650px) {

    .btn {
        font-size: 1.1rem;
        padding: 0.5rem;
    }
}

@media only screen and (max-height: 650px) {

    .btn {
        font-size: 1.1rem;
        padding: 0.5rem;
    }
}

/* Don't wrap button */

.no-wrap {
    white-space: nowrap;
}

/* Info Button */
.btn-info {
    color: var(--info);
    border-color: var(--info);
}

body.hasHover .btn-info:hover {
    background-color: var(--info);
}

.btn-info:active {
    background-color: var(--info);
}

/* Deactivated Button */
.btn-deactivated {
    text-align: center;
    color: var(--deactivated);
    border-color: var(--deactivated);
    margin-top: 2rem;
    font-size: 1.25rem;
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    font-weight: 200;
    border: 1px solid var(--deactivated);
    border-radius: 5px;
    padding: 0.75rem;
    width: 12rem;
}

/* Small text */

.small {
    font-size: 0.85rem;
}

/* Text Sections */

.informational {
    margin: 0 10%;
    margin-top: 5rem;
    margin-bottom: 10rem;
    /* overflow: hidden; */
}

.informational .section-header {
    text-transform: uppercase;
    text-align: center;
    word-wrap: break-word;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    height: 25rem;
}

.informational .section-header div:before {
    content: "";
    margin-left: -100%;
}

.informational .section-header div:after {
    content: "";
    margin-right: -100%;
}

.informational .section-header img {
    width: 10rem;
}

.informational .section-header span {
    font-size: 2rem;
    font-weight: 100;
}

.informational .section-header h1 {
    font-size: 5rem;
    font-weight: 200;
}

.informational .section-main-text {
    margin-top: 4rem;
    display: flex;
    justify-content: flex-start;
    gap: 3rem;
}

.informational .section-main-text .tag {
    display: inline-block;
    font-weight: 200;
    text-align: center;
    line-height: 1.5rem;
    height: fit-content;
    padding: 0.25rem 0;
    border-bottom: 2px solid var(--accent);
}

.informational .section-main-text p, li {
    font-weight: 400;
    line-height: 2rem;
}

.list-container {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    gap: 5rem;
}

.list-and-text-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.underline {
    text-decoration: underline;
}

.italic {
    font-style: italic;
}

.red-list {
    list-style: none;
}

.red-list li::before {
    content: "\2022";
    color: var(--accent);
    font-weight: bold;
    display: inline-block;
    width: 1em;
    margin-left: -1em;
}

.big-text {
    font-size: 1.5rem;
}

@media only screen and (max-width: 700px) {

    .informational .section-header span {
        font-size: 1.5rem;
    }

    .informational .section-header h1 {
        font-size: 3.5rem;
    }

    .informational .section-header img {
        width: 7rem;
    }

    .informational .section-main-text {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .informational .section-main-text .tag {
        width: fit-content;
    }
}

@media only screen and (max-height: 700px) {

    .informational .section-header span {
        font-size: 1.5rem;
    }

    .informational .section-header h1 {
        font-size: 3.5rem;
    }
}

@media only screen and (max-width: 500px) {
    .informational .section-header span {
        font-size: 1.15rem;
    }

    .informational .section-header h1 {
        font-size: 2.5rem;
    }

    .informational .section-header img {
        width: 6rem;
    }
}

/* Images */

.portrait-img {
    border-radius: 50%
}

/* Footer */
footer {
    position: relative;
    width: 100%;
    height: 100%;
    top: 4rem;
    height: 18rem;
    background-color: var(--base);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    text-align: center;
}

footer h1 {
    text-transform: uppercase;
    font-weight: 200;
    margin-bottom: 0.5rem;
}

footer .tag {
    margin-right: 0.5rem;
    font-weight: 200;
    text-align: center;
    line-height: 1.5rem;
    height: fit-content;
    padding: 0.25rem 0;
}

.smaller-text {
    font-size: 0.9rem;
}

/* Embed Videos */

.iframe-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 2rem 0;
}

.med-video {
    width: 53rem;
    height: 30rem;
}

@media only screen and (max-width: 1100px) {
    .med-video {
        width: 36rem;
        height: 20rem;
    }
}

@media only screen and (max-width: 650px) {
    .med-video {
        width: 27rem;
        height: 15rem;
    }
}

@media only screen and (max-width: 400px) {
    .med-video {
        width: 21.5rem;
        height: 12rem;
    }
}

/* Search Bar */

.search-container {
    width: 100%;
    margin: 2rem 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.search-container span {
    width: 100%;
    text-align: left;
}

.searchbar {
    margin: 0;
    width: 100%;
}

/* Special Lists */

.special-list-container {
    overflow: hidden;
    width: 100%;
    max-width: 100%;
}

.special-list ul {
    max-height: 40rem;
    width: 40rem;
    overflow: hidden;
}

.special-list li {
    list-style: none;
    line-height: 4rem;
    font-size: 1.25rem;
    font-weight: 200;
    border-top: 1px solid var(--base);
    background-color: var(--base-secondary);
}

.special-list li:first-of-type {
    border-top: none;
    border-radius: 10px 10px 0 0;
}

.special-list li:last-of-type {
    border-radius: 0 0 10px 10px;
}

.special-list li:only-of-type {
    border-radius: 10px;
}

.special-list .special-container {
    width: 100%;
    text-align: center;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    transition: 0.2s;
}

.special-list .special-container span {
    padding: 1.5rem;
    line-height: 1.5rem;
}

@media only screen and (max-width: 500px) {

    .special-list li {
        line-height: 3rem;
        font-size: 1rem;
        font-weight: 200;
        border-top: 1px solid var(--base);
        background-color: var(--base-secondary);
    }

    .special-list .special-container span {
        padding: 1rem;
        line-height: 1.25rem;
        word-wrap: break-word;
        width: 50%
    }

}

